--- a/src/html/blocks/nav.html
+++ b/src/html/blocks/nav.html
@@ -4,7 +4,7 @@
 
 			<div class="nav__logo">
 				<button class="nav__btn-mobile" id="mobile-nav-btn">
-					<img src="./../../img/icons/menu.svg" alt="navigation">
+					<img src="./img/icons/menu.svg" alt="navigation">
 				</button>
 				<a href="#!" class="logo">3legant<span>.</span></a>
 			</div>
